--- a/iTrainee.MVC/Views/Shared/_Layout.cshtml
+++ b/iTrainee.MVC/Views/Shared/_Layout.cshtml
@@ -47,3 +47,7 @@
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
+
+@*<script type="text/javascript">
+        window.history.forward();
+    </script>*@
