--- a/iTrainee.MVC/Areas/Admin/Views/Home/ManageUser.cshtml
+++ b/iTrainee.MVC/Areas/Admin/Views/Home/ManageUser.cshtml
@@ -28,6 +28,10 @@
 <table class="table table-hover table-bordered">
     <tr>
         <th>S.No</th>
+         @if (TempData["HeaderRole"].Equals("Mentor") || (TempData["HeaderRole"].Equals("Trainee")))
+            {
+                <th>Batch</th>
+            }
         <th>First Name</th>
         <th>Last Name</th>
         <th>DOB</th>
@@ -43,6 +47,12 @@
             <td>
                 @Count
             </td>
+            @if (TempData["HeaderRole"].Equals("Mentor") || (TempData["HeaderRole"].Equals("Trainee")))
+            {
+                <td>
+                    @Html.DisplayFor(modelItem => item.BatchName)
+            </td>
+            }
             <td>
                 @Html.DisplayFor(modelItem => item.FirstName)
             </td>
