--- a/iTrainee.MVC/Areas/Shared/Views/Messages/ViewAlertDetails.cshtml
+++ b/iTrainee.MVC/Areas/Shared/Views/Messages/ViewAlertDetails.cshtml
@@ -30,7 +30,7 @@
         border-bottom-left-radius: 0.3rem;
         width: 100%;
         padding: 1rem 0.2rem 1rem 1rem;
-        border: 1px #CCC solid;
+        border: 1px #eee8e8 solid;
     }
 
     .chat2 {
@@ -59,6 +59,15 @@
     .shadow {
         box-shadow: 0 0 8px 2px rgba(0, 0, 0, 0.2);
     }
+
+    .send-icon {
+        float: right;
+        position: relative;
+        cursor: pointer !important;
+        color: #2360a1;
+        font-size: large;
+    }
+
 </style>
 <div class="container p-0">
     <div id="chat2" class="chat2">
