--- a/iTrainee.MVC/Views/Shared/Header.cshtml
+++ b/iTrainee.MVC/Views/Shared/Header.cshtml
@@ -11,6 +11,7 @@
     TempData.Keep("TopicId");
     TempData.Keep("Role");
     TempData.Keep("UnreadMessagesCount");
+    TempData.Keep("BatchId");
 }
 
 <header>
@@ -88,9 +89,8 @@
                             <a class="nav-link text-white" href="/Admin/Home/ManageUser?role=Trainee">Trainee</a>
                         </li>
                         <li class="nav-item px-3">
-                            <a class="nav-link text-white" href="/Shared/Batch/ManageBatch">Batch</a>
+                             <a class="nav-link text-white" href="/Shared/Batch/ManageBatch?title=ManageBatch">Batch</a>
                         </li>
-
                         <li class="nav-item px-3">
                             <a class="nav-link text-white" href="/Mentor/Home/ManageStreams">Stream</a>
                         </li>
@@ -101,7 +101,8 @@
                             <a class="nav-link text-white" href="/Mentor/Home/ManageSubTopics">Sub Topics</a>
                         </li>
                         <li class="nav-item px-3">
-                            <a class="nav-link text-white" href="/Shared/UserTopics/ManageUserTopics">Assign Topics</a>
+                             <a class="nav-link text-white" href="/Shared/Batch/ManageBatch?title=AssignTopics">Assign Topics</a>
+                            
                         </li>
                         <li class="nav-item px-3">
                             <a class="nav-link text-white" href="/Shared/Messages/ManageMessages">Alert Trainee</a>
@@ -114,6 +115,7 @@
                         </li>
                         <li class="nav-item px-3">
                             <a class="nav-link text-white" href="/Shared/Batch/ManageBatch">Batch</a>
+                            @TempData["Title"] = "ManageBatch";
                         </li>
                         <li class="nav-item px-3">
                             <a class="nav-link text-white" href="/Mentor/Home/ManageStreams">Stream</a>
@@ -125,7 +127,8 @@
                             <a class="nav-link text-white" href="/Mentor/Home/ManageSubTopics">Sub Topics</a>
                         </li>
                         <li class="nav-item px-3">
-                            <a class="nav-link text-white" href="/Shared/UserTopics/ManageUserTopics">Assign Topics</a>
+                            <a class="nav-link text-white" href="/Shared/Batch/ManageBatch">Assign Topics</a>
+                            @TempData["Title"] = "AssignTopics";
                         </li>
                         <li class="nav-item px-3">
                             <a class="nav-link text-white" href="/Shared/Messages/ManageMessages">Alert Trainee</a>
