Issues solved in saving user

--- a/iTrainee.MVC/Areas/Shared/Views/Messages/ManageMessages.cshtml
+++ b/iTrainee.MVC/Areas/Shared/Views/Messages/ManageMessages.cshtml
@@ -35,6 +35,10 @@
     .modal-body {
         padding: 0px !important;
     }
+
+    .table td {
+        vertical-align: middle!important;
+    }
 </style>
 
 <div class="d-flex justify-content-between mt-4">
