--- a/iTrainee.MVC/Areas/Shared/Views/Messages/ViewAlertDetails.cshtml
+++ b/iTrainee.MVC/Areas/Shared/Views/Messages/ViewAlertDetails.cshtml
@@ -47,7 +47,7 @@
 
     .comments {
         border-radius: 5px;
-        background-color: #2360a1;
+        background-color: #237fe2;
     }
 
     .send-message {
@@ -64,7 +64,7 @@
         float: right;
         position: relative;
         cursor: pointer !important;
-        color: #2360a1;
+        color: #237fe2;
         font-size: large;
     }
 
