--- a/iTrainee.MVC/Areas/Admin/Views/Home/SaveUser.cshtml
+++ b/iTrainee.MVC/Areas/Admin/Views/Home/SaveUser.cshtml
@@ -27,9 +27,8 @@
 
             <div class="form-group">
                 <label class="col-form-label">Date Of Birth</label>
-                <input type="text" id="datepicker" class="form-control" name="DOB" required autocomplete="off" value="@(Model.Id==0 ? "" : @Model.DOB.ToString("dd/MM/yyyy"))" />
+                <input type="text" id="datepicker" class="form-control" name="DOB" required autocomplete="off" value="@(Model.Id==0 ? "" : @Model.DOB)" />
                 <span class="fa fa-calendar calendar-icon"></span>
-                @Html.ValidationMessageFor(model => model.DOB, "", new { @class = "text-danger" })
             </div>
 
             <div class="form-group padding-top-15px">
@@ -59,6 +58,15 @@
                     @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
                 </div>
             }
+            else
+            {
+                <div class="form-group">
+                    <input type="hidden" name="Password" value="@Model.Password">
+                </div>
+                <div class="form-group">
+                    <input type="hidden" name="ConfirmPassword" value="@Model.Password">
+                </div>
+            }
         </div>
         <div class="col-md-6">
             <div class="form-group">
@@ -70,13 +78,16 @@
             <div class="form-group">
                 <label class="col-form-label">Qualification</label>
                 @Html.DropDownListFor(model => model.Qualification, new List<SelectListItem>
-            { new SelectListItem{Text="B.E/B.Tech"},
+            { new SelectListItem{Text=""},
+            new SelectListItem{Text="B.E/B.Tech"},
             new SelectListItem{Text="BSC"},
             new SelectListItem{Text="BCA"},
             new SelectListItem{Text="M.E/M.Tech"},
             new SelectListItem{Text="MSC"},
             new SelectListItem{Text="MCA"},
             new SelectListItem{Text="PHD"}}, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Qualification, "", new { @class = "text-danger" })
+
             </div>
 
             @if (0 == @Model.Id)
