--- a/iTrainee.MVC/Areas/Shared/Views/Topics/AddEditTopic.cshtml
+++ b/iTrainee.MVC/Areas/Shared/Views/Topics/AddEditTopic.cshtml
@@ -4,36 +4,38 @@
 <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
 
 <div class="row">
-	<div class="col-lg-12">
-@using (Html.BeginForm())
-{
-			    @Html.AntiForgeryToken()
-				@Html.ValidationSummary(true, "", new { @class = "text-danger" })
-			<div class="form-group">
-				<label class="col-form-label">Streams</label><br />
-				@Html.DropDownListFor(model => model.StreamId, ViewBag.streamList as SelectList, "Select stream",  htmlAttributes: new { @class = "form-control"  })
-			</div>
-			<div class="form-group">
-				<div class="form-group">
-					<label class="col-form-label">Name</label>
-					@Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
-					@Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-				</div>
-			</div>
+    <div class="col-lg-12">
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            <div class="form-group">
+                <label class="col-form-label">Streams</label><br />
+                @Html.DropDownListFor(model => model.StreamId, ViewBag.streamList as SelectList, "Select stream",  htmlAttributes: new { @class = "form-control"  })
+                @Html.ValidationMessageFor(model => model.StreamId, "", new { @class = "text-danger" })
 
-			<div class="form-group">
-				<div class="form-group">
-					<label class="col-form-label">Reference URL</label>
-					@Html.EditorFor(model => model.ReferenceURL, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
-					@Html.ValidationMessageFor(model => model.ReferenceURL, "", new { @class = "text-danger" })
-				</div>
-			</div>
-			<div class="form-group mt-4 float-right">
-				<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-				<input type="submit" value="Save" class="btn btn-primary mr-3" />
-			</div>
-}
-	</div>
+            </div>
+            <div class="form-group">
+                <div class="form-group">
+                    <label class="col-form-label">Name</label>
+                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
+                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="form-group">
+                    <label class="col-form-label">Reference URL</label>
+                    @Html.EditorFor(model => model.ReferenceURL, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
+                    @Html.ValidationMessageFor(model => model.ReferenceURL, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group mt-4 float-right">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <input type="submit" value="Save" class="btn btn-primary mr-3" />
+            </div>
+        }
+    </div>
 </div>
 
 
