--- a/iTrainee.MVC/Areas/Trainee/Views/Home/UpdateDailyProgress.cshtml
+++ b/iTrainee.MVC/Areas/Trainee/Views/Home/UpdateDailyProgress.cshtml
@@ -2,7 +2,9 @@
 @{
     TempData.Keep("HeaderRole");
 }
-<form id="ProgressForm" method="post">
+@*<form id="ProgressForm" method="post">*@
+@using (Html.BeginForm())
+{
     @Html.AntiForgeryToken()
     <div class="col-lg-12">
         <div class="form-group">
@@ -57,9 +59,10 @@
         </div>
         <div class="form-group mt-4 float-right">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            <input type="submit" id="SaveProgress" value="Save" class="btn btn-primary" />
+            <input type="submit" @*id="SaveProgress"*@ value="Save" class="btn btn-primary" />
         </div>
 
     </div>
-</form>
+}
+@*</form>*@
 <script src="/js/trainee.js"></script>
