--- a/iTrainee.MVC/Views/Shared/Header.cshtml
+++ b/iTrainee.MVC/Views/Shared/Header.cshtml
@@ -32,12 +32,12 @@
                     <li class="nav-item px-3 signInSignOut">
                         <span>Date: @DateTime.Now.ToShortDateString()</span>
                     </li>
-                    @*<li class="nav-item px-3 signInSignOut">
+                    <li class="nav-item px-3 signInSignOut">
                         <span>Sign-In : @Model.SignIn.ToShortTimeString()</span>
-                        </li>
-                        <li class="nav-item px-3 signInSignOut">
+                    </li>
+                    <li class="nav-item px-3 signInSignOut">
                         <span>Sign-Out : @Model.SignOut.ToShortTimeString()</span>
-                        </li>*@
+                    </li>
                 }
                 <li class="nav-item  px-2">
                     <i class="header-notification fa-lg fa fa-bell-o"></i>
@@ -56,8 +56,7 @@
 
                         <a href="/Home/ChangePassword?userId=@TempData["UserId"]" class="dropdown-item"> Change Password</a>
 
-                        @*<a class="dropdown-item" href="/Home/Login">Sign Out</a>
-                          <a onclick="noBack()" href="/Home/Logout">Logout</a>*@
+                        @*<a class="dropdown-item" href="/Home/Login">Sign Out</a>*@
                         <a asp-controller="Home" asp-action="Logout">Logout</a>
                     </div>
                 </li>
