Solved tempdata null pointer exception issue on Batch CRUD operation

--- a/iTrainee.MVC/Views/Shared/Header.cshtml
+++ b/iTrainee.MVC/Views/Shared/Header.cshtml
@@ -12,6 +12,7 @@
     TempData.Keep("Role");
     TempData.Keep("UnreadMessagesCount");
     TempData.Keep("BatchId");
+    TempData.Keep("Title");
 }
 <style>
     .iTrainee-header-fixed {
