--- a/iTrainee.MVC/Areas/Shared/Views/Batch/ManageBatch.cshtml
+++ b/iTrainee.MVC/Areas/Shared/Views/Batch/ManageBatch.cshtml
@@ -62,8 +62,8 @@
 					    <a href="/Shared/Batch/AddEditBatch?Id=@item.Id" ><i class="fa fa-pencil edit-icon"></i></a> 
                     </td>
                     <td class="text-center">
-                         <a  href="/Shared/Batch/DeleteBatch?Id=@item.Id" ><i class="fa fa-trash delete-icon"></i></a>
-                    </td>
+                         <a data-id-to-delete="@item.Id" data-toggle="modal" data-target="#delete-batch"><i class="fa fa-trash delete-icon"></i></a>
+                </td>
                 } else
                 {
                  <td class="text-center">	
